ex1/ex1.output
State 7 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: problem clause_list
    2      | problem

    3 problem: P_CNF NUM NUM EOL

    4 clause_list: clause_list clause
    5            | clause

    6 clause: literal_list clause_end
    7       | clause_end

    8 clause_end: ZERO EOL
    9           | ZERO
   10           | EOL
   11           | ERROR

   12 literal_list: literal_list NUM
   13             | NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    P_CNF (258) 3
    NUM <value> (259) 3 12 13
    ZERO (260) 8 9
    EOL (261) 3 8 10
    ERROR <character> (262) 11


Nonterminals, with rules where they appear

    $accept (8)
        on left: 0
    input (9)
        on left: 1 2
        on right: 0
    problem (10)
        on left: 3
        on right: 1 2
    clause_list (11)
        on left: 4 5
        on right: 1 4
    clause (12)
        on left: 6 7
        on right: 4 5
    clause_end (13)
        on left: 8 9 10 11
        on right: 6 7
    literal_list (14)
        on left: 12 13
        on right: 6 12


State 0

    0 $accept: . input $end

    P_CNF  shift, and go to state 1

    input    go to state 2
    problem  go to state 3


State 1

    3 problem: P_CNF . NUM NUM EOL

    NUM  shift, and go to state 4


State 2

    0 $accept: input . $end

    $end  shift, and go to state 5


State 3

    1 input: problem . clause_list
    2      | problem .

    NUM    shift, and go to state 6
    ZERO   shift, and go to state 7
    EOL    shift, and go to state 8
    ERROR  shift, and go to state 9

    $default  reduce using rule 2 (input)

    clause_list   go to state 10
    clause        go to state 11
    clause_end    go to state 12
    literal_list  go to state 13


State 4

    3 problem: P_CNF NUM . NUM EOL

    NUM  shift, and go to state 14


State 5

    0 $accept: input $end .

    $default  accept


State 6

   13 literal_list: NUM .

    $default  reduce using rule 13 (literal_list)


State 7

    8 clause_end: ZERO . EOL
    9           | ZERO .

    EOL  shift, and go to state 15

    EOL       [reduce using rule 9 (clause_end)]
    $default  reduce using rule 9 (clause_end)


State 8

   10 clause_end: EOL .

    $default  reduce using rule 10 (clause_end)


State 9

   11 clause_end: ERROR .

    $default  reduce using rule 11 (clause_end)


State 10

    1 input: problem clause_list .
    4 clause_list: clause_list . clause

    NUM    shift, and go to state 6
    ZERO   shift, and go to state 7
    EOL    shift, and go to state 8
    ERROR  shift, and go to state 9

    $default  reduce using rule 1 (input)

    clause        go to state 16
    clause_end    go to state 12
    literal_list  go to state 13


State 11

    5 clause_list: clause .

    $default  reduce using rule 5 (clause_list)


State 12

    7 clause: clause_end .

    $default  reduce using rule 7 (clause)


State 13

    6 clause: literal_list . clause_end
   12 literal_list: literal_list . NUM

    NUM    shift, and go to state 17
    ZERO   shift, and go to state 7
    EOL    shift, and go to state 8
    ERROR  shift, and go to state 9

    clause_end  go to state 18


State 14

    3 problem: P_CNF NUM NUM . EOL

    EOL  shift, and go to state 19


State 15

    8 clause_end: ZERO EOL .

    $default  reduce using rule 8 (clause_end)


State 16

    4 clause_list: clause_list clause .

    $default  reduce using rule 4 (clause_list)


State 17

   12 literal_list: literal_list NUM .

    $default  reduce using rule 12 (literal_list)


State 18

    6 clause: literal_list clause_end .

    $default  reduce using rule 6 (clause)


State 19

    3 problem: P_CNF NUM NUM EOL .

    $default  reduce using rule 3 (problem)
